syntax = "proto3";
package multiacquirer;

option java_multiple_files = true;
option java_package = "vn.nextpay.multiacquirer";
option java_generic_services = true;

option go_package = ".;api";

message Empty {}

message User {
  string id = 1;
  string mId = 2;
  string tId = 3;
  string username = 4;
  string name = 5;
  string email = 6;
  string phone = 7;
}

message UserList {
  repeated User users = 1;
}

message LoginResponse {
  string token = 1;
  string mId = 2;
  string tId = 3;
  string username = 4;
  string name = 5;
  string email = 6;
  string phone = 7;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message ChangePasswordRequest {
  string username = 1;
  string newPassword = 2;
  string confirmPassword = 3;
}

message GetUserByIdRequest {
  string id = 1;
}

service UserService {
  rpc login(LoginRequest) returns (LoginResponse) {};
  rpc register(RegisterRequest) returns (LoginResponse) {};
  rpc update(UpdateRequest) returns (User) {};
  rpc changePassword(ChangePasswordRequest) returns (LoginResponse) {};
  rpc getById(GetUserByIdRequest) returns (User) {}
  rpc list(Empty) returns (UserList) {}
}